# fusiontimeseries

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  pyproject.toml
data/: analytics.ipynb  download.py
data/flux/benchmark/: flux_data.json
docs/: installation.md
docs/methods/: BilinearLoRA.md  OSSBilinearLoRA.md  RSSBilinearLoRA.md
docs/report/: 0126-progress-report.md
playground/: chronos-2-playbook.ipynb  chronos-bolt-tiny-playbook.ipynb  timesfm-2p5-200M-playbook.ipynb  tirex-playbook.ipynb  utils.py
src/benchmarking/: chronos-bolt-tiny-benchmark.ipynb
src/fusiontimeseries/: __init__.py  chronos_2_benchmark.py  chronos_bolt_tiny_benchmark.py  timesfm_2p5_200M_benchmark.py  tirex_benchmark.py
src/fusiontimeseries/finetuning/: arestimator_finetuning.ipynb  chronos2_augmented_windowed_train_val_finetuning.ipynb  evaluation_utils.py
src/fusiontimeseries/finetuning/chronos2/: chronos2_bilinear.ipynb  chronos2_full.ipynb  chronos2_lora.ipynb  chronos2_oss_bilinear.ipynb  chronos2_rss_bilinear.ipynb  dataset.py
src/fusiontimeseries/finetuning/evaluation/: __init__.py  loss_curve.py  loss_curve_prototype.ipynb
src/fusiontimeseries/finetuning/preprocessing/: utils.py
src/fusiontimeseries/finetuning/timesfm/: dataset.py  timesfm2p0_bilinear.ipynb  timesfm2p0_full.ipynb  timesfm2p0_lora.ipynb  timesfm2p0_oss_bilinear.ipynb  timesfm2p0_rss_bilinear.ipynb  trainer.py
src/fusiontimeseries/legacy/: __init__.py  benchmark_analysis.ipynb  benchmarkv2_analysis.ipynb  chronos-bolt-tiny-benchmark.ipynb  chronos_2_benchmark.py  chronos_2_benchmarkv2.py  chronos_bolt_tiny_benchmark.py  chronos_bolt_tiny_benchmarkv2.py  timesfm_2p5_200M_benchmark.py  timesfm_2p5_200M_benchmarkv2.py  tirex_benchmark.py  tirex_benchmarkv2.py
src/fusiontimeseries/legacy/services/: benchmarker.py  benchmarkerv2.py  flux_dataset.py  flux_trace.py  flux_trace_provider.py  scaler.py  utils.py
src/fusiontimeseries/lib/: benchmarking.py  conditioning.py  config.py  dataset.py  get_next_path.py  modules.py
src/fusiontimeseries/loralib/: __init__.py  layers.py  lda.py  sparsePCA.py  utils.py
src/fusiontimeseries/services/: __init__.py  benchmarker.py  evaluator.py  flux_dataset.py  flux_trace.py  flux_trace_provider.py  prediction_vizualization_provider.py
src/fusiontimeseries/zeroshot/: __init__.py  chronos2_benchmark.ipynb  chronos_bolt_tiny_benchmark.ipynb  timesfm2p0_500m_benchmark.ipynb  timesfm2p5_200m_benchmark.ipynb  tirex_benchmark.ipynb
