[project]
name = "fusiontimeseries"
version = "0.7.0"
description = "Time series prediction of heat flux time traces in Tokamak reactors."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "anywidget>=0.9.21",
    "chronos-forecasting>=2.1.0",
    "hf-xet>=1.2.0",
    "lightning>=2.5.6",
    "nbformat>=4.2.0",
    "peft>=0.17.1",
    "rich>=14.2.0",
    "timesfm>=1.3.0",
    "tirex-ts[cuda,gluonts,hfdataset]>=1.1.1",
    "transformers>=4.57.3",
    "typer>=0.21.1",
    "typer-config>=1.4.3",
]

[project.optional-dependencies]
cpu = ["torch>=2.9", "autogluon>=1.5.0"]
cu126 = ["torch>=2.9", "autogluon>=1.5.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }]]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "pre-commit>=4.3.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
